[BLC-689] Fixed horizontal scrolling issue in various DynamicForms

--- a/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
+++ b/admin/broadleaf-open-admin-platform/src/main/java/org/broadleafcommerce/openadmin/theme/broadleaf/public/sc/skins/Broadleaf/less/skin_styles.less
@@ -569,6 +569,14 @@ Button (also used as MenuButton base style)
     font-size: @baseFontSize;
     line-height: @baseLineHeight;
 }
+
+.formCell,
+.formCellFocused,
+.formCellDisabled,
+.formCellError {
+    width: 100%;
+}
+
 .formTitle,
 .formTitleFocused,
 .formTitleDisabled,
